--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,7 +1,10 @@
-:host{
-    display: block;
-    border: 1px solid black;
-    border-radius: 8px;
-    height: 300px;
-    width: 200px;
+:host {
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 7px;
+    height: 150px;
+    width: 100px;
+    //text-align: center;
+    padding: 8px;
+    font-size: 2em;
 }
