--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>Espadas</h1>
 
-<app-card></app-card>
+<ng-container *ngFor="let dk of deck">
+  <app-card [card]="dk"></app-card>
+</ng-container>
